docs(composer): add MIT license

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "harmolipi/activecampaign-v3-api-wrapper-php",
   "description": "This is a PHP wrapper designed to consume the V3 ActiveCampaign API",
+  "license": "MIT",
   "type": "library",
   "autoload": {
     "psr-4": {
